gdkpixbufdec: EOS and NOT_LINKED are no errors in general

Don't post an error message for them but let upstream handle
anything accordingly.

https://bugzilla.gnome.org/show_bug.cgi?id=735564